--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -11,7 +11,7 @@
 <div class="container text-center col-3 pt-4">
     <main class="form-signin">
         <form method="POST">
-            <img class="mb-4" src="/static/img/1676479214_preview_3732.jpg" alt="" width="40%" height="40%">
+            <img class="mb-4" src="/static/img/ege_logo.png" alt="" width="40%" height="40%">
             <h1 class="h3 mb-3 fw-normal">Пожалуйста, войдите в систему</h1>
         
             <div class="form-floating">
