--- a/templates/profile.html
+++ b/templates/profile.html
@@ -36,7 +36,7 @@
                             <p class="text-muted mb-0">{{user.name}}</p>
                         </div>
                     </div>
-                    <hr>
+                    <hr style="border: none; border-top: 2px dashed #4CAF50;">
                     <div class="row">
                         <div class="col-sm-3">
                             <p class="mb-0">Фамилия</p>
@@ -45,7 +45,7 @@
                             <p class="text-muted mb-0">{{user.surname}}</p>
                         </div>
                     </div>
-                    <hr>
+                    <hr style="border: none; border-top: 2px dashed #4CAF50;">
                     <div class="row">
                         <div class="col-sm-3">
                             <p class="mb-0">Отчество</p>
@@ -54,7 +54,7 @@
                             <p class="text-muted mb-0">{{user.patronymic}}</p>
                         </div>
                     </div>
-                    <hr>
+                    <hr style="border: none; border-top: 2px dashed #4CAF50;">
                     <div class="row">
                         <div class="col-sm-3">
                             <p class="mb-0">Логин</p>
@@ -63,7 +63,7 @@
                             <p class="text-muted mb-0">{{user.login}}</p>
                         </div>
                     </div>
-                    <hr>
+                    <hr style="border: none; border-top: 2px dashed #4CAF50;">
                     <div class="row">
                         <div class="col-sm-3">  
                             <p class="mb-0">Класс</p>
@@ -72,7 +72,7 @@
                             <p class="text-muted mb-0">{{user.class_number}}</p>
                         </div>
                     </div>
-                    <hr>
+                    <hr style="border: none; border-top: 2px dashed #4CAF50;">
                     <div class="row">
                         <div class="col-sm-3">
                             <p class="mb-0">Email</p>
@@ -81,7 +81,7 @@
                             <p class="text-muted mb-0">{{user.email}}</p>
                         </div>
                     </div>
-                    <hr>
+                    <hr style="border: none; border-top: 2px dashed #4CAF50;">
                 </div>
             </div>
           </div>
