Автор статьи показывается на странице posts

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -89,11 +89,11 @@
                             <span class="fw-bold text-secondary me-1">Сложность:</span>
                             <span>
                                 {% if task.difficulty == 0 %}
-                                    <i class="bi bi-emoji-smile"></i> Легкая
+                                    Легкая
                                 {% elif task.difficulty == 1 %}
-                                    <i class="bi bi-emoji-neutral"></i> Нормальная
+                                    Нормальная
                                 {% else %}
-                                    <i class="bi bi-emoji-frown"></i> Сложная
+                                    Сложная
                                 {% endif %}
                             </span>
                         </div>
