--- a/templates/posts.html
+++ b/templates/posts.html
@@ -6,14 +6,35 @@
 
 {% block body %}
 <div class="container w-75 pt-5">
-    <h1 class="mt-2" align="center" style="font-size: 300%;">Cтатьи на сайте!</h1>
+    <h1 class="mt-2" align="center" style="font-size: 300%;">Статьи на сайте!</h1>
     {% if tables|length == 0 %}
         <h1 align="center" style="font-size: 200%;">Пока нет статей</h1>
     {% endif %}
     {% for table in tables %}
         <div class="alert alert-info">
-            <h1 style="color: #000;">{{table['name']}}<img align="right" height="18%" width="19%" src="static/img/posts_img/{{table.avatar_name}}"></h1> 
-            <p style="color:#000"><a href="posts/{{table['id']}}" class="btn btn-info">Подробнее</a>  Дата: {{table.date}}</p>
+            <div class="d-flex justify-content-between align-items-center">
+                <div>
+                    <h1 style="color: #000;">{{table.name}}</h1>
+                    <div class="d-flex align-items-center gap-2 mt-2">
+                        {% if table.student %}
+                        <div class="badge bg-secondary">
+                            <i class="bi bi-person-circle"></i>
+                            {{table.student.name}} {{table.student.surname}}
+                        </div>
+                        {% endif %}
+                        <div class="badge bg-light text-dark">
+                            <i class="bi bi-calendar"></i>
+                            {{table.date.strftime('%d.%m.%Y %H:%M')}}
+                        </div>
+                    </div>
+                </div>
+                <img align="right" height="18%" width="19%" src="static/img/posts_img/{{table.avatar_name}}">
+            </div>
+            <p class="mt-3">
+                <a href="posts/{{table.id}}" class="btn btn-info">
+                    <i class="bi bi-arrow-right-circle"></i> Подробнее
+                </a>
+            </p>
         </div>
     {% endfor %}
 </div>
