--- a/templates/post.html
+++ b/templates/post.html
@@ -33,7 +33,7 @@
       src="https://rutube.ru/play/embed/{{table.video_link}}" frameBorder="0" allow="clipboard-write; autoplay"
       webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     {% endif %}
-    <h3>Дата: {{table.date}}</h3>
+    <h3>Дата: {{table.date.strftime('%d.%m.%Y %H:%M')}}</h3>
     {% if is_author %}
         <a class="btn btn-success" href="{{table.id}}/update">Редактировать</a>
         <a class="btn btn-danger" href="{{table.id}}/delete">Удалить</a>
