--- a/templates/variants.html
+++ b/templates/variants.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 
 {% block title %}
-Статьи
+Варианты
 {% endblock %}
 
 {% block body %}
 <div class="container w-75 pt-5">
-    <h1 class="mt-2" align="center" style="font-size: 300%;">Статьи на сайте!</h1>
+    <h1 class="mt-2" align="center" style="font-size: 300%;">Варианты на сайте!</h1>
     {% if tables|length == 0 %}
-        <h1 align="center" style="font-size: 200%;">Пока нет статей</h1>
+        <h1 align="center" style="font-size: 200%;">Пока нет вариантов</h1>
     {% endif %}
-    <div align="center" class="mb-4"><a class="btn btn-outline-dark" style="height: 7vh; font-size: 150%; text-decoration: none;" href="{{url_for('add_post')}}">
-            Добавить статью
-        </a>
-    </div>  
+    <div align="center" class="mb-4"><a class="btn btn-outline-dark" style="height: 7vh; font-size: 150%; text-decoration: none;" href="{{url_for('add_variant')}}">
+        Добавить вариант
+    </a>
+</div>  
     {% for table in tables %}
         <div class="alert alert-info">
             <div class="d-flex justify-content-between align-items-center">
