--- a/templates/variants.html
+++ b/templates/variants.html
@@ -7,35 +7,25 @@
 {% block body %}
 <div class="container w-75 pt-5">
     <h1 class="mt-2" align="center" style="font-size: 300%;">Варианты на сайте!</h1>
-    {% if tables|length == 0 %}
+    {% if variants|length == 0 %}
         <h1 align="center" style="font-size: 200%;">Пока нет вариантов</h1>
     {% endif %}
     <div align="center" class="mb-4"><a class="btn btn-outline-dark" style="height: 7vh; font-size: 150%; text-decoration: none;" href="{{url_for('add_variant')}}">
         Добавить вариант
     </a>
 </div>  
-    {% for table in tables %}
+    {% for variant in variants %}
         <div class="alert alert-info">
             <div class="d-flex justify-content-between align-items-center">
                 <div>
-                    <h1 style="color: #000;">{{table.name}}</h1>
-                    <div class="d-flex align-items-center gap-2 mt-2">
-                        {% if table.student %}
-                        <div class="badge bg-secondary">
-                            <i class="bi bi-person-circle"></i>
-                            {{table.student.name}} {{table.student.surname}}
-                        </div>
-                        {% endif %}
-                        <div class="badge bg-light text-dark">
-                            <i class="bi bi-calendar"></i>
-                            {{table.date.strftime('%d.%m.%Y %H:%M')}}
-                        </div>
-                    </div>
+                    <h1 style="color: #000;">Вариант {{variant.id}}</h1>
                 </div>
-                <img align="right" height="18%" width="19%" src="static/img/posts_img/{{table.avatar_name}}">
+                <div>
+                    <h1 style="color: #000;">Автор: {{variant.student.name}}</h1>
+                </div>
             </div>
             <p class="mt-3">
-                <a href="posts/{{table.id}}" class="btn btn-info">
+                <a href="watch_variant/{{variant.id}}" class="btn btn-info">
                     <i class="bi bi-arrow-right-circle"></i> Подробнее
                 </a>
             </p>
