Сделал красоту (цвета и margin) 	modified:   static/css/style.css 	new file:   static/img/avatars/cbvyOSHhuoJs.webp 	modified:   templates/add_pitch.html 	modified:   templates/add_post.html 	modified:   templates/add_task_form.html 	modified:   templates/base.html 	modified:   templates/login_form.html 	modified:   templates/main_page.html 	modified:   templates/pitches.html 	modified:   templates/tasks.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,10 +60,6 @@ body {
 
 /**/
 
-a {
-  text-decoration: none;
-}
-
 .a_head {
   color: white;
 }
@@ -78,8 +74,7 @@ a {
 }
 
 .be_centered {
-  margin-top: auto;
-  margin-bottom: auto;
+  margin: 0 auto;
 }
 
 .logo_png {
@@ -104,7 +99,7 @@ ul, li {
   list-style: none;
 }
 
-header a, li, h1, h2, h3, h4, p {
+header a, header li, header h1, header h2, header h3, header h4, header p {
   font-family: 'Courier New', Courier, monospace;
 }
 
@@ -128,8 +123,35 @@ header a, li, h1, h2, h3, h4, p {
   margin-right: 10px;
 }
 
+/* Colors */
 
+.main_backcolor {
+  background-color: #D3D7E7;
+}
 
+.middle_backcolor {
+  background-color: #f0f6fa;
+}
+
+.last_backcolor {
+  background-color: #465779;
+}
+
+.main_color {
+  color: #D3D7E7;
+}
+
+.middle_color {
+  color: #f0f6fa;
+}
+
+.last_color {
+  color: #465779;
+}
+
+.header_back {
+  background-color: #221831;
+}
 
 
 
