--- a/templates/add_pitch.html
+++ b/templates/add_pitch.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="container pt-4">
+<div class="container pt-4"  style="margin-top: 80px;">
     <form method="post" enctype="multipart/form-data">
         <p align="center">
             <input type="text" name="name" id="name" class="form-control" value="" style="height: 100%; width: 40%; font-size: 250%; text-align: center; font-weight: bold;" placeholder="Название презентации" required>
