--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %} 
-<div class="container text-center col-3 pt-4">
+<div class="container text-center col-3 pt-4"  style="margin-top: 80px;">
     <main class="form-signin">
         <form method="POST">
             <img class="mb-4" src="/static/img/1676479214_preview_3732.jpg" alt="" width="40%" height="40%">
