--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -38,7 +38,7 @@
 
   <div class="cards">
 
-      <div class="CARD uk-card uk-card-default uk-width-1-1 uk-margin" uk-grid>
+      <div class="CARD uk-card uk-card-default uk-width-1-1 uk-margin middle_backcolor" uk-grid>
         <!-- <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
             <img class="cards-img" src="../static/img/Main_info2.png" alt="" uk-cover>
             <canvas width="20vh" height="20vh"></canvas>
@@ -54,7 +54,7 @@
         </div>
       </div>
     
-    <div class="CARD uk-card uk-card-default uk-width-1-1 uk-margin" uk-grid>
+    <div class="CARD uk-card uk-card-default uk-width-1-1 uk-margin middle_backcolor" uk-grid>
       <!-- <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
           <img class="cards-img" src="../static/img/Main_info2.png" alt="" uk-cover>
           <canvas width="20vh" height="20vh"></canvas>
@@ -70,7 +70,7 @@
       </div>
     </div>
   
-    <div class="CARD uk-card uk-card-default uk-width-1-1 uk-margin" uk-grid>
+    <div class="CARD uk-card uk-card-default uk-width-1-1 uk-margin middle_backcolor" uk-grid>
       <!-- <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
           <img class="cards-img" src="../static/img/Main_info2.png" alt="" uk-cover>
           <canvas width="200" height="200"></canvas>
