--- a/templates/add_task_form.html
+++ b/templates/add_task_form.html
@@ -39,7 +39,7 @@
 {% endblock %}
 
 {% block body %} 
-    <div class="container" style="width: 50%;">
+    <div class="container" style="width: 50%; margin-top: 80px;">
         <h1 class="text-center pt-2">Добавить задание</h1>
         <form method="POST" enctype="multipart/form-data">
             <textarea name="statement" id="statement" class="mt-2" style="width: 100%; height:30vh;" placeholder="Условие задачи" required></textarea>
