--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container" style="margin-top: 80px;">
    <div class="row">
         <div class="col-2" style="overflow-y: auto; height: 98vh;">
             <form method="POST">
@@ -18,16 +18,20 @@
                     </a>
                     <ul class="list-unstyled ps-0">
                         <li class="mb-1">
-                            <button style="width: 90%;" type="button" class="btn btn-outline-dark align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#number_tasks-collapse" aria-expanded="true">
-                                Выбрать задания
+                            <button style="width: 90%;" type="button" class="last_backcolor btn btn-outline-dark align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#number_tasks-collapse" aria-expanded="true">
+                                <p class="be_centered" style="color: white;">Выбрать задания</p>
                             </button>
                             <div class="collapse" id="number_tasks-collapse">
                                 <ul class="btn-toggle-nav list-unstyled fw-normal mt-1 small">
                                     <div class="d-flex justify-content-center mb-2"> <!-- Центрируем кнопки -->
-                                        <button type="button" class="btn btn-outline-secondary" style="width: 80%;" onclick="checkAllCheckboxes()">Выбрать все</button>
+                                        <button type="button" class="btn btn-outline-secondary last_backcolor" style="width: 80%;" onclick="checkAllCheckboxes()">
+                                            <p class="be_centered" style="color: white;">Выбрать все</p>
+                                        </button>
                                     </div>
                                     <div class="d-flex justify-content-center mb-2">
-                                        <button type="button" class="btn btn-outline-secondary" style="width: 80%;" onclick="uncheckAllCheckboxes()">Сбросить все</button>
+                                        <button type="button" class="btn btn-outline-secondary last_backcolor" style="width: 80%;" onclick="uncheckAllCheckboxes()">
+                                            <p class="be_centered" style="color: white;">Сбросить все</p>
+                                        </button>
                                     </div>
                                     {% for i in range(1, 28) %}
                                     <li class="ms-3">
@@ -44,8 +48,8 @@
                             </div>
                         </li>
                         <li class="mb-1">
-                            <button style="width: 90%;" type="button" class="btn btn-outline-dark align-items-center rounded" data-bs-toggle="collapse" data-bs-target="#difficulty-collapse" aria-expanded="true">
-                              Сложность
+                            <button style="width: 90%;" type="button" class="btn btn-outline-dark align-items-center rounded last_backcolor" data-bs-toggle="collapse" data-bs-target="#difficulty-collapse" aria-expanded="true">
+                                <p class="be_centered" style="color: white;">Сложность</p>
                             </button>
                             <div class="collapse" id="difficulty-collapse">
                                 <ul class="btn-toggle-nav list-unstyled fw-normal mt-1 small">
@@ -78,9 +82,9 @@
         <div class="col-sm-10" style="overflow-y: auto; height: 100vh;"> <!-- Добавляем прокрутку для правой колонки -->
             <h1 align="center" class="pt-2 pb-2">Задачи ЕГЭ</h1>
             {% for task, tags_for_task in tasks %}
-                <div class="task-item border rounded p-3 mb-3">
+                <div class="task-item border rounded p-3 mb-3 bg-light">
                     <!-- Мета-данные задания -->
-                    <div class="d-flex flex-wrap gap-3 bg-light border rounded p-3 mb-3">
+                    <div class="d-flex flex-wrap gap-3 border rounded p-3 mb-3 middle_backcolor">
                         <div class="d-flex align-items-center">
                             <span class="fw-bold text-secondary me-1">Источник:</span>
                             <span>{{ task.source }}</span>
