--- a/templates/watch_variant.html
+++ b/templates/watch_variant.html
@@ -8,16 +8,16 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container" style="margin-top: 80px;">
    <div class="row">
         <div class="col-2" style="overflow-y: auto; height: 98vh;">
         </div>
         <div class="col-sm-10" style="overflow-y: auto; height: 100vh;"> <!-- Добавляем прокрутку для правой колонки -->
             <h1 align="center" class="pt-2 pb-2">Задачи ЕГЭ</h1>
             {% for task in variant.tasks %}
-                <div class="task-item border rounded p-3 mb-3">
+                <div class="task-item border rounded p-3 mb-3 bg-light">
                     <!-- Мета-данные задания -->
-                    <div class="d-flex flex-wrap gap-3 bg-light border rounded p-3 mb-3">
+                    <div class="d-flex flex-wrap gap-3 border rounded p-3 mb-3 middle_backcolor">
                         <div class="d-flex align-items-center">
                             <span class="fw-bold text-secondary me-1">Id:</span>
                             <span>{{ task.id }}</span>
