--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -14,6 +14,7 @@
         
         <label class="pt-2">Добавить видео в статью(ссылка)</label>
         <input type="text" class="form-control mb-3" id="video_link" name="video_link" style="width:30%;">
+        <label class="pt-2">Аватарка статьи</label>
         <input type="file" name="file" id="file" class="form-control" style="width: 22%"><br>
         <input id="send_post" type="submit" name="send_post" class="btn btn-success mb-3" value="Запостить статью"> 
     </form>
