--- a/templates/course.html
+++ b/templates/course.html
@@ -8,15 +8,10 @@
 {% endblock %}
 
 {% block body %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-              <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-              <span class="fs-4">Sidebar</span>
-            </a>
-            <hr>
-            <ul class="nav nav-pills flex-column mb-auto">
+<link rel="stylesheet" src="../static/css/style_courses.css">
+<div class="flex-shrink-0 p-3 uk-flex-inline" style="width: 100%; margin-top: 70px;">
+        <div class="uk-flex-inline uk-flex-between" style="width: 280px; height: 80vh; overflow-y: scroll;">
+            <ul class="nav nav-pills flex-column mb-auto" style="width: 100%;">
                 {% for u in units %}
                   <!-- <li>
                     <a href="/course/{{course.id}}/{{u.id}}" class="nav-link link-body-emphasis">
@@ -24,28 +19,20 @@
                       {{u.name}}
                     </a>
                   </li> -->
-                  <li>
+                  <li style="width: 100%;">
                     <a href="/course/{{course.id}}/{{u.id}}" class="uk-link-reset nav-link link-body-emphasis">
-                      <div class="uk-card uk-card-hover uk-card-large uk-margin uk-flex-center middle_backcolor" style="width: 100%">
+                      <div class="uk-card uk-card-hover uk-card-large uk-margin uk-flex-center" style="border-radius: 10px; background-color: #95a6c9;">
                         <p class="be_centered uk-text-large" style="text-decoration: none; text-align: center;">{{u.name}}</p>
                       </div>
                     </a>
                   </li>
                 {% endfor %}
-              <ul class="dropdown-menu text-small shadow">
-                <li><a class="dropdown-item" href="#">New project...</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
               </ul>
-            </div>
-          </div>
+        </div>
 
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <h1>{{target_unit.name}}</h1>
-                <iframe src="{{target_unit.link}}" class="flex-grow-1 ms-3" style="border: none; width: 100%; height: 500px;"></iframe>
-        </main>
-    </div>
+        <div class="be_centered" style="width: 100%; height: 80vh;">
+            <h1>{{target_unit.name}}</h1>
+            <iframe src="{{target_unit.link}}" class="flex-grow-1 ms-3" style="border: none; width: 100%; height: 70vh;"></iframe>
+        </div>
 </div>
 {% endblock %}
