--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 {% block title %}
 Статьи
 {% endblock %}
@@ -12,7 +13,9 @@
     {% endif %}
     {% for table in tables %}
         <div class="alert alert-info">
-            <h1 style="color: #000;">{{table['name']}}<img align="right" height="18%" width="19%" src="static/img/posts_img/{{table.avatar_name}}"></h1> 
+            <h1 style="color: #000;">{{table['name']}}
+                <img align="right" class="img-thumbnail" style="max-width: 100px; max-height: 100px; object-fit: cover;" src="static/img/posts_img/{{table.avatar_name}}">
+            </h1>
             <p style="color:#000"><a href="posts/{{table['id']}}" class="btn btn-info">Подробнее</a>  Дата: {{table.date}}</p>
         </div>
     {% endfor %}
