добавлена страничка курсов преподаваелей

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
             <a href="/logout"><button type="button" class="btn btn-outline-light me-2">Выйти</button></a>
           {% else %}
             <a href="{{url_for('login_form')}}"><button type="button" class="btn btn-outline-light me-2">Вход</button></a>
-            <a href="{{url_for('register_choice')}}"><button type="button" class="btn btn-outline-light me-2">Регистрация</button></a>
+            <a href="{{url_for('register_student')}}"><button type="button" class="btn btn-outline-light me-2">Регистрация</button></a>
           {% endif %}
         </div>
     </div>
