remove header in courses iframe pages

--- a/templates/course.html
+++ b/templates/course.html
@@ -32,7 +32,7 @@
 
         <div class="be_centered" style="width: 100%; height: 80vh;">
             <h1>{{target_unit.name}}</h1>
-            <iframe src="{{target_unit.link}}" class="flex-grow-1 ms-3" style="border: none; width: 100%; height: 70vh;"></iframe>
+            <iframe src="{{target_unit.link}}?no_header=1" class="flex-grow-1 ms-3" style="border: none; width: 100%; height: 70vh;"></iframe>
         </div>
 </div>
 {% endblock %}
