--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
 </head> 
 <body style="background-color: rgb(246, 246, 246); height: 100vh;">
 
+  {% if not no_header %}
   <header style="display: flex; width: 100vw; justify-content: center;">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start" style="background-color: #2f2f2f; width: 100%; height: 8vh;">
         <a href="{{url_for('main_page')}}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none" style="margin-left: 10px; height: 100%; align-items: center;">
@@ -53,6 +54,7 @@
         </div>
     </div>
   </header>
+  {% endif %}
 
 
     <div class="mt-5">
